overflow hiding borders solved

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,7 +14,6 @@
 	cursor: default;
 	color: white;
 	position: relative;
-	overflow: hidden;
 	border: 1px solid transparent;
 }
 
